--- a/index.html
+++ b/index.html
@@ -1,3 +1,10 @@
----
-layout: home
----
+<html xmlns="http://www.w3.org/1999/xhtml">    
+    <head>      
+      <title>The Tudors</title>      
+      <meta http-equiv="refresh" content="0;URL='https://blog.zotiquestgames.com/'" />    
+    </head>    
+    <body> 
+      <p>This page has moved to a <a href="https://blog.zotiquestgames.com/">
+        blog.zotiquestgames.com</a>.</p> 
+    </body>  
+  </html>
